done stable section

--- a/index.html
+++ b/index.html
@@ -201,6 +201,51 @@
         </defs>
     </svg>
 </header>
+<main class="main">
+    <section class="stable">
+        <div class="container">
+            <div class="stable__inner">
+                <div class="stable__imgbox">
+                    <img src="images/stable/man.png" alt="" class="stable__img">
+                </div>
+                <div class="stable__content">
+                    <h2 class="title stable__title">
+                        получайте <br> стабильный доход
+                        <span>и повышайте качество жизни</span>
+                    </h2>
+                    <p class="stable__text">
+                        Мы предлагаем вам готовую систему запуска , ведения и развития онлайн-бизнеса с нуля.
+                    </p>
+                    <div class="stable__inclides">
+                        В неё входят:
+                    </div>
+                    <ul class="stable__list">
+                        <li class="stable__item list-decor">
+                            эффективные инструменты интернет-маркетинга,
+                        </li>
+                        <li class="stable__item list-decor">
+                            инновационные эко-продукты для здоровья,
+                        </li>
+                        <li class="stable__item list-decor">
+                            система бизнес-обучения и личностного развития
+                        </li>
+                    </ul>
+                    <div class="stable__price">
+                        <div class="stable__price-num">
+                            500$
+                            <span>в месяц</span>
+                        </div>
+                        <p class="stable__price-description">
+                            Используя наш опыт и знания, вы сможете легко
+                            стать интернет-предпринимателем с доходностью
+                            от 500$ в месяц в нише эко-продуктов
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
 
 
 <script src="js/script.js"></script>
