--- a/index.html
+++ b/index.html
@@ -245,6 +245,52 @@
             </div>
         </div>
     </section>
+    <section class="decision">
+        <div class="container">
+            <h2 class="title decision__title">
+                Решение для тех, <br> кто хочет работать на себя
+            </h2>
+            <div class="decision__items">
+                <div class="decision__item">
+                    <div class="decision__item-title">
+                        бизнес-модель
+                    </div>
+                    <img class="decision__item-img" src="images/decision/1.svg" alt="">
+                    <p class="decision__item-text">
+                        Не нужно искать продукт, технологии и каналы продвижения. Все необходимые инструменты для
+                        быстрого и эффективного запуска собственного бизнеса уже готовы
+                    </p>
+                </div>
+                <div class="decision__item">
+                    <div class="decision__item-title">
+                        высокий доход
+                    </div>
+                    <img class="decision__item-img" src="images/decision/2.svg" alt="">
+                    <p class="decision__item-text">
+                        Ежемесячно увеличивайте прибыль и достигайте поставленных целей, используя наши стратегии и
+                        рекомендации. Нет никаких ограничений по уровню дохода
+                    </p>
+                </div>
+                <div class="decision__item">
+                    <div class="decision__item-title">
+                        свободный график
+                    </div>
+                    <img class="decision__item-img" src="images/decision/3.svg" alt="">
+                    <p class="decision__item-text">
+                        Управляйте своим временем
+                        и работайте в комфортном для себя режиме. У вас появится возможность путешествовать, чаще
+                        видеться с близкими и больше отдыхать
+                    </p>
+                </div>
+            </div>
+            <a class="btn decision__btn" href="#">
+                зарегистрироваться
+            </a>
+            <p class="decision__btn-decription">
+                Регистрируйтесь в системе, чтобы узнать подробнее о доходах
+            </p>
+        </div>
+    </section>
 </main>
 
 
