done expect section

--- a/index.html
+++ b/index.html
@@ -291,6 +291,134 @@
             </p>
         </div>
     </section>
+    <section class="expect">
+        <div class="container">
+            <div class="title expect__title">
+                Что Вас ждет
+                <span>после регистрации</span>
+            </div>
+            <div class="expect__items">
+                <div class="expect__item">
+                    <div class="expect__item-body">
+                        <h3 class="expect__item-title">
+                            Обучение
+                        </h3>
+                        <div class="expect__item-subtitle">
+                            всем необходимым знаниям для старта
+                        </div>
+                        <div class="expect__item-listtitle">
+                            Мы подготовили практический онлайн-курс, где научим вас:
+                        </div>
+                        <ul class="expect__item-list">
+                            <li class="expect__item-listitem list-decor">
+                                финансовой грамотности
+                            </li>
+                            <li class="expect__item-listitem list-decor">
+                                механикам получения прибыли онлайн
+                            </li>
+                            <li class="expect__item-listitem list-decor">
+                                эффективному управлению командой
+                            </li>
+                            <li class="expect__item-listitem list-decor">
+                                стратегиям развития бизнеса
+                            </li>
+                            <li class="expect__item-listitem list-decor">
+                                увеличения прибыли
+                            </li>
+                        </ul>
+                        <p class="expect__item-text">
+                            С этими знаниями и при поддержке куратора, вы сможете выйти на высокий уровень дохода уже
+                            через
+                            месяц
+                        </p>
+                    </div>
+                    <div class="expect__item-imgbox expect__item-imgbox--1">
+                        <img src="images/expect/11.png" alt="" class="expect__item-img">
+                    </div>
+                </div>
+                <div class="expect__item expect__item--reverse">
+                    <div class="expect__item-body">
+                        <h3 class="expect__item-title">
+                            эко-продукты
+                        </h3>
+                        <div class="expect__item-subtitle">
+                            для комплексного оздоровления организма
+                        </div>
+                        <div class="expect__item-text">
+                            <p>
+                                Уникальные формулы наших продуктов созданы по методу синергизма, получены благодаря
+                                нативной
+                                вытяжке из высокоэффективного сырья и на 100% состоят из натуральных компонентов
+                            </p>
+                            <p>
+                                Вы сможете комплексно оздоровить свое тело, укрепить иммунитет и улучшить самочувствие с
+                                помощью инновационных эко-продуктов по специальным ценам для партнеров
+                            </p>
+                        </div>
+                        <div class="expect__item-cards">
+                            <div class="expect__item-card">
+                                <div class="expect__item-cardimgbox">
+                                    <img class="expect__item-cardimg" src="images/expect/1.svg" alt="">
+                                </div>
+                                <p class="expect__item-cardtext">
+                                    Собственное производство
+                                </p>
+                            </div>
+                            <div class="expect__item-card">
+                                <div class="expect__item-cardimgbox">
+                                    <img class="expect__item-cardimg" src="images/expect/2.svg" alt="">
+                                </div>
+                                <p class="expect__item-cardtext">
+                                    ECO <br>
+                                    состав
+                                </p>
+                            </div>
+                            <div class="expect__item-card">
+                                <div class="expect__item-cardimgbox">
+                                    <img class="expect__item-cardimg" src="images/expect/3.svg" alt="">
+                                </div>
+                                <p class="expect__item-cardtext">
+                                    Высокое качество
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="expect__item-imgbox expect__item-imgbox--2">
+                        <img src="images/expect/12.png" alt="" class="expect__item-img">
+                        <p class="expect__item-imgbox-text">
+                            Сегодня на рынке <br> нет аналогов <br> с таким эффективным действием и 100% натуральным
+                            составом
+                        </p>
+                    </div>
+                </div>
+                <div class="expect__item">
+                    <div class="expect__item-body">
+                        <h3 class="expect__item-title">
+                            команда
+                        </h3>
+                        <div class="expect__item-subtitle">
+                            партнеров-единомышленников
+                        </div>
+                        <div class="expect__item-text">
+                            <p>
+                                В компании вы найдете людей со схожими интересами, целями
+                                и взглядами на жизнь
+                            </p>
+                            <p>
+                                У нас нет конкуренции и соперничества, что делает амтфосферу благоприятной для
+                                сотрудничества и общения. Знакомьтесь, обменивайтесь опытом, встречайтесь на
+                                бизнес-мероприятиях
+                                и двигайтесь к большим целям ВМЕСТЕ
+                            </p>
+                        </div>
+                    </div>
+                    <div class="expect__item-imgbox expect__item-imgbox--3">
+                        <img src="images/expect/13.png" alt="" class="expect__item-img">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 
 
