done improve section

--- a/index.html
+++ b/index.html
@@ -419,6 +419,16 @@
             </div>
         </div>
     </section>
+    <section class="improve">
+        <div class="container">
+            <h2 class="title improve__title">
+                развивайте свое дело и получайте доход в партнерстве с нами
+            </h2>
+            <a class="btn improve__btn" href="#">
+                зарегистрироваться
+            </a>
+        </div>
+    </section>
 </main>
 
 
