done preferences section

--- a/index.html
+++ b/index.html
@@ -429,6 +429,138 @@
             </a>
         </div>
     </section>
+    <section class="preferences">
+        <div class="container">
+            <h2 class="title preferences__title">
+                Что ЕЩЕ вы получите
+                <span>после регистрации</span>
+            </h2>
+            <div class="preferences__inner">
+                <div class="preferences__imgbox">
+                    <img src="images/preferences/big.png" alt="" class="preferences__img">
+                </div>
+                <div class="preferences__list">
+                    <div class="preferences__item-wrap">
+                        <div class="preferences__item">
+                            <div class="preferences__item-imgbox">
+                                <img src="images/preferences/1.svg" alt="" class="preferences__item-img">
+                            </div>
+                            <p class="preferences__item-text">
+                                Пошаговое онлайн-обучение
+                                и руководство по запуску
+                            </p>
+                        </div>
+                        <div class="preferences__item">
+                            <div class="preferences__item-imgbox">
+                                <img src="images/preferences/2.svg" alt="" class="preferences__item-img">
+                            </div>
+                            <p class="preferences__item-text">
+                                Ваш личный веб-сайт для продвижения в интернете
+                            </p>
+                        </div>
+                        <div class="preferences__item">
+                            <div class="preferences__item-imgbox">
+                                <img src="images/preferences/3.svg" alt="" class="preferences__item-img">
+                            </div>
+                            <p class="preferences__item-text">
+                                Ваш личный наставник поможет решить любой вопрос
+                            </p>
+                        </div>
+                    </div>
+                    <div class="preferences__item-wrap">
+                        <div class="preferences__item">
+                            <div class="preferences__item-imgbox">
+                                <img src="images/preferences/4.svg" alt="" class="preferences__item-img">
+                            </div>
+                            <p class="preferences__item-text">
+                                Сертифицированная, качественная эко-продукция
+                            </p>
+                        </div>
+                        <div class="preferences__item">
+                            <div class="preferences__item-imgbox">
+                                <img src="images/preferences/5.svg" alt="" class="preferences__item-img">
+                            </div>
+                            <p class="preferences__item-text">
+                                Готовая система масштабирования бизнеса
+                            </p>
+                        </div>
+                        <div class="preferences__item">
+                            <div class="preferences__item-imgbox">
+                                <img src="images/preferences/6.svg" alt="" class="preferences__item-img">
+                            </div>
+                            <p class="preferences__item-text">
+    
+                            </p>Сильная поддержка команды
+                            и бизнес-партнеров
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="preferences__box">
+                <div class="preferences__body">
+                    <div class="title preferences__body-title">
+                        выход на новый <br> уровень жизни
+                    </div>
+                    <p class="preferences__body-text">
+                        В партнерстве с нами вы посмотрите на Мир под другим углом — почувствуете себя в зоне комфорта,
+                        личностного роста и финансового изобилия
+                    </p>
+                    <div class="preferences__body-premium">
+                        Премиальные бонусы
+                    </div>
+                </div>
+                <div class="preferences__privileges">
+                    <div class="preferences__privileges-title">
+                        Привилегии для партнеров
+                    </div>
+                    <ul class="preferences__privileges-list">
+                        <li class="preferences__privileges-item">
+                            <div class="preferences__privileges-imgbox">
+                                <img src="images/preferences/11.svg" alt="" class="preferences__privileges-img">
+                            </div>
+                            <p class="preferences__privileges-text">
+                                Авто и недвижимость от компании
+                            </p>
+                        </li>
+                        <li class="preferences__privileges-item">
+                            <div class="preferences__privileges-imgbox">
+                                <img src="images/preferences/12.svg" alt="" class="preferences__privileges-img">
+                            </div>
+                            <p class="preferences__privileges-text">
+                                Премии от 10 000
+                                до 1 млн. рублей
+                            </p>
+                        </li>
+                        <li class="preferences__privileges-item">
+                            <div class="preferences__privileges-imgbox">
+                                <img src="images/preferences/13.svg" alt="" class="preferences__privileges-img">
+                            </div>
+                            <p class="preferences__privileges-text">
+                                Путешествия по миру
+                            </p>
+                        </li>
+                        <li class="preferences__privileges-item">
+                            <div class="preferences__privileges-imgbox">
+                                <img src="images/preferences/14.svg" alt="" class="preferences__privileges-img">
+                            </div>
+                            <p class="preferences__privileges-text">
+                                Статусные значки
+                                из драгоценных металлов
+                            </p>
+                        </li>
+                        <li class="preferences__privileges-item">
+                            <div class="preferences__privileges-imgbox">
+                                <img src="images/preferences/15.svg" alt="" class="preferences__privileges-img">
+                            </div>
+                            <p class="preferences__privileges-text">
+                                Участие в закрытом клубе предпринимателей
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 
 
