done change section

--- a/index.html
+++ b/index.html
@@ -561,6 +561,16 @@
             </div>
         </div>
     </section>
+    <section class="change">
+        <div class="container">
+            <h2 class="title change__title">
+                Начните менять свою жизнь уже сегодня
+            </h2>
+            <a href="#" class="btn change__btn">
+                зарегистрироваться
+            </a>
+        </div>
+    </section>
 </main>
 
 
