--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -327,7 +327,8 @@
                             </li>
                         </ul>
                         <p class="expect__item-text">
-                            С этими знаниями и при поддержке куратора, вы сможете выйти на высокий уровень дохода уже
+                            С этими знаниями и при поддержке куратора, вы сможете выйти на высокий уровень дохода
+                            уже
                             через
                             месяц
                         </p>
@@ -351,7 +352,8 @@
                                 вытяжке из высокоэффективного сырья и на 100% состоят из натуральных компонентов
                             </p>
                             <p>
-                                Вы сможете комплексно оздоровить свое тело, укрепить иммунитет и улучшить самочувствие с
+                                Вы сможете комплексно оздоровить свое тело, укрепить иммунитет и улучшить
+                                самочувствие с
                                 помощью инновационных эко-продуктов по специальным ценам для партнеров
                             </p>
                         </div>
@@ -489,7 +491,7 @@
                                 <img src="images/preferences/6.svg" alt="" class="preferences__item-img">
                             </div>
                             <p class="preferences__item-text">
-    
+
                             </p>Сильная поддержка команды
                             и бизнес-партнеров
                         </div>
@@ -502,7 +504,8 @@
                         выход на новый <br> уровень жизни
                     </div>
                     <p class="preferences__body-text">
-                        В партнерстве с нами вы посмотрите на Мир под другим углом — почувствуете себя в зоне комфорта,
+                        В партнерстве с нами вы посмотрите на Мир под другим углом — почувствуете себя в зоне
+                        комфорта,
                         личностного роста и финансового изобилия
                     </p>
                     <div class="preferences__body-premium">
@@ -572,6 +575,104 @@
         </div>
     </section>
 </main>
+<footer class="footer">
+    <div class="container">
+        <div class="footer__top">
+            <a href="#" class="logo">
+                <img src="images/icons/logo.png" alt="" class="logo__img">
+            </a>
+            <ul class="footer__socials">
+                <li class="footer__socials-item">
+                    <a class="footer__socials-link" href="#">
+                        <svg width="26" height="25" viewBox="0 0 26 25" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <g>
+                                <path
+                                    d="M19.2288 0H7.76335C4.03182 0 0.996094 3.03573 0.996094 6.76726V18.2329C0.996094 21.9642 4.03182 25 7.76335 25H19.229C22.9603 25 25.996 21.9642 25.996 18.2329V6.76726C25.996 3.03573 22.9603 0 19.2288 0V0ZM24.5304 18.2329C24.5304 21.1561 22.1522 23.5343 19.2288 23.5343H7.76335C4.83997 23.5343 2.4617 21.1561 2.4617 18.2329V6.76726C2.4617 3.84387 4.83997 1.4656 7.76335 1.4656H19.229C22.1522 1.4656 24.5304 3.84387 24.5304 6.76726V18.2329Z"
+                                    fill="white" />
+                                <path
+                                    d="M13.4969 5.66406C9.72757 5.66406 6.66113 8.7305 6.66113 12.4998C6.66113 16.2691 9.72757 19.3355 13.4969 19.3355C17.2662 19.3355 20.3326 16.2691 20.3326 12.4998C20.3326 8.7305 17.2662 5.66406 13.4969 5.66406ZM13.4969 17.8699C10.5359 17.8699 8.12674 15.4609 8.12674 12.4998C8.12674 9.53883 10.5359 7.12967 13.4969 7.12967C16.458 7.12967 18.867 9.53883 18.867 12.4998C18.867 15.4609 16.458 17.8699 13.4969 17.8699Z"
+                                    fill="white" />
+                                <path
+                                    d="M20.4972 3.23682C19.3833 3.23682 18.4773 4.143 18.4773 5.2567C18.4773 6.37059 19.3833 7.27677 20.4972 7.27677C21.6111 7.27677 22.5172 6.37059 22.5172 5.2567C22.5172 4.14281 21.6111 3.23682 20.4972 3.23682ZM20.4972 5.81097C20.1916 5.81097 19.9429 5.56225 19.9429 5.2567C19.9429 4.95095 20.1916 4.70242 20.4972 4.70242C20.8029 4.70242 21.0516 4.95095 21.0516 5.2567C21.0516 5.56225 20.8029 5.81097 20.4972 5.81097Z"
+                                    fill="white" />
+                            </g>
+                            <defs>
+                                <clipPath>
+                                    <rect width="25" height="25" fill="white" transform="translate(0.996094)" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer__socials-item">
+                    <a class="footer__socials-link" href="#">
+                        <svg width="26" height="25" viewBox="0 0 26 25" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <g>
+                                <path
+                                    d="M13.6471 20.3125C17.2638 20.3125 15.9742 18.0229 16.2534 17.3646C16.2492 16.8729 16.2451 16.4 16.2617 16.1125C16.4909 16.1771 17.0315 16.451 18.1482 17.5365C19.8721 19.276 20.3128 20.3125 21.7055 20.3125H24.269C25.0815 20.3125 25.5044 19.976 25.7159 19.6937C25.9201 19.4208 26.1201 18.9417 25.9013 18.1958C25.3294 16.4 21.994 13.299 21.7867 12.9719C21.818 12.9115 21.868 12.8312 21.894 12.7896H21.8919C22.5503 11.9198 25.0628 8.15521 25.4326 6.64896C25.4336 6.64687 25.4346 6.64375 25.4346 6.64062C25.6346 5.95312 25.4513 5.50729 25.2617 5.25521C24.9763 4.87813 24.5221 4.6875 23.9086 4.6875H21.3451C20.4867 4.6875 19.8357 5.11979 19.5065 5.90833C18.9555 7.30937 17.4076 10.1906 16.2471 11.2104C16.2117 9.76562 16.2357 8.6625 16.2544 7.84271C16.2919 6.24375 16.4128 4.6875 14.7534 4.6875H10.7242C9.68464 4.6875 8.68984 5.82292 9.76693 7.17083C10.7086 8.35208 10.1055 9.01042 10.3086 12.2875C9.51693 11.4385 8.10859 9.14583 7.11276 6.21562C6.83359 5.42292 6.41068 4.68854 5.22005 4.68854H2.65651C1.61693 4.68854 0.996094 5.25521 0.996094 6.20417C0.996094 8.33542 5.7138 20.3125 13.6471 20.3125ZM5.22005 6.25104C5.44609 6.25104 5.46901 6.25104 5.63672 6.72708C6.65651 9.73021 8.94401 14.174 10.6148 14.174C11.8701 14.174 11.8701 12.8875 11.8701 12.4031L11.869 8.54687C11.8003 7.27083 11.3357 6.63542 11.0305 6.25L14.6846 6.25417C14.6867 6.27188 14.6638 10.5198 14.6951 11.549C14.6951 13.0104 15.8555 13.8479 17.6669 12.0146C19.5784 9.85729 20.9003 6.63229 20.9534 6.50104C21.0315 6.31354 21.0992 6.25 21.3451 6.25H23.9086H23.919C23.918 6.25312 23.918 6.25625 23.9169 6.25937C23.6826 7.35312 21.369 10.8385 20.5951 11.9208C20.5826 11.9375 20.5711 11.9552 20.5596 11.9729C20.219 12.5292 19.9419 13.1437 20.6065 14.0083H20.6076C20.668 14.0812 20.8253 14.2521 21.0544 14.4896C21.7669 15.225 24.2107 17.7396 24.4273 18.7396C24.2836 18.7625 24.1273 18.7458 21.7055 18.751C21.1898 18.751 20.7867 17.9802 19.2482 16.4281C17.8648 15.0823 16.9669 14.5323 16.1492 14.5323C14.5617 14.5323 14.6773 15.8208 14.6919 17.3792C14.6971 19.0687 14.6867 18.5344 14.6982 18.6406C14.6055 18.6771 14.3398 18.75 13.6471 18.75C7.03776 18.75 2.73359 8.25938 2.56797 6.25417C2.62526 6.24896 3.4138 6.25208 5.22005 6.25104Z"
+                                    fill="white" />
+                            </g>
+                            <defs>
+                                <clipPath>
+                                    <rect width="25" height="25" fill="white" transform="translate(0.996094)" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer__socials-item">
+                    <a class="footer__socials-link" href="#">
+                        <svg width="26" height="25" viewBox="0 0 26 25" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <g>
+                                <path
+                                    d="M15.1851 24.9512H11.1738C10.5037 24.9512 9.9587 24.4072 9.9587 23.7385V14.7083H7.61839C6.94836 14.7083 6.40332 14.1642 6.40332 13.4956V9.6262C6.40332 8.95748 6.94836 8.41351 7.61839 8.41351H9.9587V6.47583C9.9587 4.55456 10.5632 2.91996 11.7066 1.74904C12.8551 0.572777 14.4602 -0.0488281 16.3484 -0.0488281L19.4077 -0.043869C20.0765 -0.0427246 20.6206 0.501251 20.6206 1.16882V4.76151C20.6206 5.43022 20.0758 5.9742 19.4059 5.9742L17.3462 5.97496C16.718 5.97496 16.558 6.10066 16.5238 6.13918C16.4675 6.20308 16.4004 6.38371 16.4004 6.88248V8.41332H19.2511C19.4658 8.41332 19.6737 8.46615 19.8524 8.56571C20.2378 8.78067 20.4775 9.18713 20.4775 9.62639L20.4759 13.4958C20.4759 14.1642 19.9309 14.7081 19.2609 14.7081H16.4004V23.7385C16.4004 24.4072 15.8551 24.9512 15.1851 24.9512ZM11.4272 23.4856H14.9317V14.0522C14.9317 13.6057 15.2958 13.2425 15.743 13.2425H19.0075L19.0088 9.87911H15.7428C15.2956 9.87911 14.9317 9.51595 14.9317 9.06944V6.88248C14.9317 6.30989 14.99 5.65872 15.423 5.1693C15.9463 4.57764 16.7709 4.50935 17.3458 4.50935L19.1521 4.50859V1.42136L16.3472 1.41678C13.3128 1.41678 11.4272 3.35541 11.4272 6.47583V9.06944C11.4272 9.51576 11.0633 9.87911 10.6161 9.87911H7.8718V13.2425H10.6161C11.0633 13.2425 11.4272 13.6057 11.4272 14.0522V23.4856ZM19.4048 1.42174H19.405H19.4048Z"
+                                    fill="white" />
+                            </g>
+                            <defs>
+                                <clipPath>
+                                    <rect width="25" height="25" fill="white" transform="translate(0.996094)" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer__socials-item">
+                    <a class="footer__socials-link" href="#">
+                        <svg width="26" height="25" viewBox="0 0 26 25" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <g>
+                                <path
+                                    d="M1.48862 20.4113C3.8032 21.88 6.49695 22.6561 9.2782 22.6561C13.3511 22.6561 17.0834 21.0915 19.7886 18.2509C22.3772 15.5321 23.8011 11.879 23.7303 8.1717C24.7115 7.33212 25.8657 5.72899 25.8657 4.16649C25.8657 3.56753 25.2157 3.18733 24.6886 3.49253C23.7667 4.0342 22.9261 4.17587 22.0615 3.93316C20.2959 2.21233 17.6678 1.84983 15.4532 3.04358C13.5178 4.08524 12.4417 5.99149 12.5386 8.07483C9.26883 7.67587 6.24799 6.03628 4.14174 3.48837C3.79591 3.07274 3.13966 3.1217 2.86466 3.59253C1.85007 5.33003 1.86049 7.34358 2.74278 8.96962C2.32299 9.04358 2.06362 9.3967 2.06362 9.77899C2.06362 11.4134 2.79903 12.9155 3.98341 13.9405C3.76257 14.153 3.68966 14.4686 3.78341 14.7498C4.30424 16.3144 5.48341 17.5373 6.95737 18.1498C5.35424 18.9155 3.58132 19.1707 2.0032 18.9769C1.18653 18.8665 0.783408 19.9644 1.48862 20.4113ZM9.49174 18.4175C10.0761 17.9686 9.7657 17.0332 9.03237 17.0175C7.7407 16.9905 6.56466 16.354 5.83237 15.353C6.18549 15.33 6.55112 15.2759 6.89903 15.1821C7.69174 14.9675 7.65424 13.8238 6.84903 13.6623C5.38757 13.3686 4.2407 12.304 3.81049 10.9332C4.2032 11.03 4.6032 11.0842 5.00216 11.0915C5.79278 11.0957 6.09174 10.0821 5.44695 9.65816C3.99382 8.70087 3.37403 7.01024 3.78445 5.42066C6.32195 7.99149 9.76466 9.54045 13.4063 9.71545C13.9282 9.74774 14.3199 9.25712 14.2053 8.76024C13.7105 6.61545 14.9084 5.11233 16.1949 4.41962C17.4678 3.73212 19.5115 3.51753 21.0782 5.16128C21.5438 5.65191 23.1147 5.67066 23.9136 5.4842C23.5553 6.1592 23.0042 6.79983 22.4886 7.16024C22.2688 7.31441 22.1428 7.57066 22.1563 7.83837C22.324 11.2602 21.049 14.6623 18.6584 17.1717C16.2501 19.6998 12.9199 21.0925 9.27924 21.0925C7.83133 21.0925 6.41153 20.8571 5.06987 20.403C6.67403 20.0925 8.19799 19.4134 9.49174 18.4175Z"
+                                    fill="white" />
+                            </g>
+                            <defs>
+                                <clipPath>
+                                    <rect width="25" height="25" fill="white" transform="translate(0.996094)" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer__bottom">
+            <p class="footer__bottom-about">
+                ©2021 «Company name» | Разработано - Effex-it.com
+            </p>
+            <div class="footer__bottom-right">
+                <a class="footer__bottom-link footer__bottom-agpree" href="#">
+                    Пользовательское соглашение
+                </a>
+                <a class="footer__bottom-link footer__bottom-confidentials" href="#">
+                    Политика конфиденциальности
+                </a>
+            </div>
+        </div>
+    </div>
+</footer>
 
 
 <script src="js/script.js"></script>
