add webp & avif images with picture tag
site weight without modern images format - 2.7mb. Weight with avif & webp - 685kB

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <div class="container">
         <div class="header__top">
             <a href="#" class="logo">
-                <img src="images/icons/logo.png" alt="" class="logo__img">
+                <picture>
+                    <source srcset="images/icons/logo.avif" type="image/avif">
+                    <source srcset="images/icons/logo.webp" type="image/webp">
+                    <img src="images/icons/logo.png" alt="" class="logo__img">
+                </picture>
             </a>
             <nav class="menu">
                 <button class="menu__btn" type="button">
@@ -76,7 +80,11 @@
                             C вами на связи:
                         </div>
                         <div class="card__contacts-wrapper">
-                            <img class="card__img" src="images/content/person.jpg" alt="">
+                            <picture>
+                                <source srcset="images/content/person.avif" type="image/avif">
+                                <source srcset="images/content/person.webp" type="image/webp">
+                                <img class="card__img" src="images/content/person.jpg" alt="">
+                            </picture>
                             <div class="card__data">
                                 <div class="card__data-item card__name">
                                     Johne Doe
@@ -206,7 +214,11 @@
         <div class="container">
             <div class="stable__inner">
                 <div class="stable__imgbox">
-                    <img src="images/stable/man.png" alt="" class="stable__img">
+                    <picture>
+                        <source srcset="images/stable/man.avif" type="image/avif">
+                        <source srcset="images/stable/man.webp" type="image/webp">
+                        <img src="images/stable/man.png" alt="" class="stable__img">
+                    </picture>
                 </div>
                 <div class="stable__content">
                     <h2 class="title stable__title">
@@ -334,7 +346,11 @@
                         </p>
                     </div>
                     <div class="expect__item-imgbox expect__item-imgbox--1">
-                        <img src="images/expect/11.png" alt="" class="expect__item-img">
+                        <picture>
+                            <source srcset="images/expect/11.avif" type="image/avif">
+                            <source srcset="images/expect/11.webp" type="image/webp">
+                            <img src="images/expect/11.png" alt="" class="expect__item-img">
+                        </picture>
                     </div>
                 </div>
                 <div class="expect__item expect__item--reverse">
@@ -386,7 +402,11 @@
                         </div>
                     </div>
                     <div class="expect__item-imgbox expect__item-imgbox--2">
-                        <img src="images/expect/12.png" alt="" class="expect__item-img">
+                        <picture>
+                            <source srcset="images/expect/12.avif" type="image/avif">
+                            <source srcset="images/expect/12.webp" type="image/webp">
+                            <img src="images/expect/12.png" alt="" class="expect__item-img">
+                        </picture>
                         <p class="expect__item-imgbox-text">
                             Сегодня на рынке <br> нет аналогов <br> с таким эффективным действием и 100% натуральным
                             составом
@@ -415,7 +435,11 @@
                         </div>
                     </div>
                     <div class="expect__item-imgbox expect__item-imgbox--3">
-                        <img src="images/expect/13.png" alt="" class="expect__item-img">
+                        <picture>
+                            <source srcset="images/expect/13.avif" type="image/avif">
+                            <source srcset="images/expect/13.webp" type="image/webp">
+                            <img src="images/expect/13.png" alt="" class="expect__item-img">
+                        </picture>
                     </div>
                 </div>
             </div>
@@ -439,7 +463,11 @@
             </h2>
             <div class="preferences__inner">
                 <div class="preferences__imgbox">
-                    <img src="images/preferences/big.png" alt="" class="preferences__img">
+                    <picture>
+                        <source srcset="images/preferences/big.avif" type="image/avif">
+                        <source srcset="images/preferences/big.webp" type="image/webp">
+                        <img src="images/preferences/big.png" alt="" class="preferences__img">
+                    </picture>
                 </div>
                 <div class="preferences__list">
                     <div class="preferences__item-wrap">
@@ -579,7 +607,11 @@
     <div class="container">
         <div class="footer__top">
             <a href="#" class="logo">
-                <img src="images/icons/logo.png" alt="" class="logo__img">
+                <picture>
+                    <source srcset="images/icons/logo.avif" type="image/avif">
+                    <source srcset="images/icons/logo.webp" type="image/webp">
+                    <img src="images/icons/logo.png" alt="" class="logo__img">
+                </picture>
             </a>
             <ul class="footer__socials">
                 <li class="footer__socials-item">
